--- a/Volume04_chap_10/Syllabus/app/src/main/AndroidManifest.xml
+++ b/Volume04_chap_10/Syllabus/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CourseDetail"
+            android:label="@string/title_activity_course_detail" >
+        </activity>
     </application>
 
 </manifest>
