--- a/Volume04_chap_10/Syllabus/app/src/main/AndroidManifest.xml
+++ b/Volume04_chap_10/Syllabus/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,5 +22,5 @@
             android:label="@string/title_activity_course_detail" >
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />;
 </manifest>
