--- a/Volume04_chap_09/01/FlyingDroid01/app/build.gradle
+++ b/Volume04_chap_09/01/FlyingDroid01/app/build.gradle
@@ -23,3 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
+
+task hello{
+    doLast{
+        println 'Hello world!'
+    }
+}
